(docs) : 물리 계층, 데이터 링크 계층 설명 추가

--- a/network/모두의네트워크/3_물리계층.md
+++ b/network/모두의네트워크/3_물리계층.md
@@ -66,6 +66,7 @@ BinaryData decode(AnalogSignal signal) {
     
     - 트위스트 페어 케이블은 카테고리에 따라 구분하고 카테고리가 클수록 빠른 전송속도에 대응이 가능하다.
         - 카테고리를 줄여서 Cat이라고 표기한다.
+    - bps : bit per second의 약자로써, 1초 동안 전송할 수 있는 비트수를 나타낸다.
     
 2. STP 케이블 (Shielded Twist Pair)
     - 구리 선 여덟 개를 두 개씩 꼬아 만든 선을 실드로 보호한 케이블
