--- a/network/모두의네트워크/5_네트워크계층.md
+++ b/network/모두의네트워크/5_네트워크계층.md
@@ -1,11 +1,13 @@
-# 4. 네트워크 계층 : 목적지에 데이터 전달하기
+# 5. 네트워크 계층 : 목적지에 데이터 전달하기
 ## 네트워크 계층의 역할
 ### # 네트워크 간의 연결 구조
 - 데이터 링크 계층에서는 이더넷 규칙을 기반으로 데이터의 전송을 담당했다.
 - 즉, 같은 네트워크에 있는 컴퓨터로는 데이터를 전송할 수 있지만 인터넷이나 다른 네트워크에 있는 컴퓨터로는 데이터를 전송할 수 없다.
 - 네트워크 계층은 서로 다른 네트워크에 있는 목적지로 데이터를 전송하기 위해 필요한 계층
     - 이 계층을 통해 다른 네트워크로 데이터를 전송하려면 `라우터 (Router)`라는 네트워크 장비가 필요하다.
-- 랜에서는 MAC 주소만으로 통신할 수 있기에 다른 네트워크를 식별할 수 있는 `IP 주소`가 필요하다.
+- 즉, 누가 누구에게 전달할지 통신에 있어서 가장 중요한 정보를 다룬다.
+    - 통신 상대를 정하기 위해서 네트워크상에 존재하는 모든 기기에는 고유 주소가 할당되어 있어야 한다.
+    - 랜에서는 MAC 주소만으로 통신할 수 있기에 다른 네트워크를 식별할 수 있는 `IP 주소`가 필요하다.
     
 <br>
 <br>
@@ -13,8 +15,13 @@
 ## IP
 ### # IP 주소 (Internet Protocol)
 - 어떤 네트워크의 어떤 컴퓨터인지 구분할 수 있는 주소, IP 주소가 있다면 다른 네트워크에 있는 목적지를 지정할 수 있다.
+- IP는 비커넥션형 프로토콜로써, '일단 보내면 그걸로 끝' 이다. 상대에게 전달되었는지 아닌지는 신경쓰지 않는다.
+    - 헤더가 꺠지지 않았는지 확인하거나 목적지의 주소가 존재하는지 아닌지 정도의 판단 처리만 하고, 재전송 처리는 수행하지 않는다.
+- 신경안쓰는 대신 신뢰성 있는 IP를 지원하기 위해 `ICMP` 라는 프로토콜을 지원한다.
 - 네트워크 계층에서는 캡슐화 할때 IP 헤더를 붙인다.
-
+    - 데이터 링크 계층에서는 해당 캡슐화 과정을 세그먼트 라고 하고 
+    - 네트워크 계층에서의 캡슐화는 `IP 데이터그램` 이라고 한다.
+    
     ![IP 헤더](./img/ip_header.png)
 
     - 버전, 헤더길이, 서비스 유형, 전체 패킷 길이
@@ -22,6 +29,7 @@
     - TTL, 프로토콜, 헤더 체크섬
     - 출발지 IP 주소
     - 목적지 IP 주소
+    
 - 데이터 링크 계층에서는 프레임이었는데, 네트워크 계층에서 캡술화된 데이터를 **IP 패킷**이라고 한다.
 - MAC 주소는 48비트 16진수로 표시하고, IP 주소는 32비트 10진수로 표시한다.
 - 사람과 컴퓨터가 쉽게 이해하기 위해 2진수로 표시했으며 8비트 단위로 나눠서 표시한다.
@@ -34,6 +42,16 @@
     - `네트워크 ID` : **어떤 네트워크 인지**를 나타낸다.
     - `호스트 ID` : **해당 네트워크의 어느 컴퓨터인지** 나타낸다.
     - 이 두가지가 합쳐져서 IP 주소가 되는 것이다.
+
+<br>
+
+### # ICMP (Internet Control Message Protocol) 란?
+- IP는 비커넥션형 통신을 수행하기 때문에 데이터가 상대에게 전달됐는지 전혀 관여하지 않는다.
+- 신뢰성이 떨어지는 IP를 보조하기 위해 네트워크 계층에서는 `ICMP` 라는 프로토콜을 지원한다.
+- 수신측에게 전달되지 않는 등의 문제가 발생할 때 라우터가 송신측에게 그 사실을 알려주는 메세지를 보내는 프로토콜이다.
+- ICMP 메시지는 메시지만 단독으로 보내지는 것이 아니라 IP 패킷의 데이터 영역에 실려 있으며, IP 헤더가 추가되어 보내진다.
+    - ICMP 헤더와 ICMP 데이터에 IP 헤더를 붙인 형태로 송신측에 보낸다.
+- ICMP 의 예는 접속 상태를 조사하는 명령인 `ping`이 ICMP 메시지를 사용해서 결과를 반환한다.
 
 <br>
 
