전송 계층 정리

--- a/network/모두의네트워크/5_네트워크계층.md
+++ b/network/모두의네트워크/5_네트워크계층.md
@@ -19,7 +19,7 @@
     - 헤더가 꺠지지 않았는지 확인하거나 목적지의 주소가 존재하는지 아닌지 정도의 판단 처리만 하고, 재전송 처리는 수행하지 않는다.
 - 신경안쓰는 대신 신뢰성 있는 IP를 지원하기 위해 `ICMP` 라는 프로토콜을 지원한다.
 - 네트워크 계층에서는 캡슐화 할때 IP 헤더를 붙인다.
-    - 데이터 링크 계층에서는 해당 캡슐화 과정을 세그먼트 라고 하고 
+    - 데이터 링크 계층에서는 해당 캡슐화 과정을 프레임이라고 하고 
     - 네트워크 계층에서의 캡슐화는 `IP 데이터그램` 이라고 한다.
     
     ![IP 헤더](./img/ip_header.png)
