(docs) : 오타 정리 및 응용 계층 정리

--- a/network/모두의네트워크/6_전송계층.md
+++ b/network/모두의네트워크/6_전송계층.md
@@ -181,7 +181,7 @@
 <br>
 
 ### # Stop and Wait
-- 상대방에게 데이터를 보낸 후 잘 받았다는 응답이 올 떄까지 기다리는 방식이다.
+- 상대방에게 데이터를 보낸 후 잘 받았다는 응답이 올 때 까지 기다리는 방식이다.
     - 상대방이 응답을 하면 데이터를 보낸다.
 - 서로 응답을 주고받고 하는 방식은 비효율적이라고 할 수 있다. 송신 측은 자신이 직접 데이터를 보내봐야 수신측이 처리할 수 있는지 알 수 있기 때문이다.
 - 이런 비효율성을 커버하기 위해 여러가지 오류 제어 방식을 도입해서 사용한다.
@@ -214,7 +214,7 @@
 - 흐름 제어에서 설명한 Stop and Wait 방법도 응답이 오지 않으면 제대로 받을때까지 데이터를 재전송하는 방법이기에 오류 제어가 가능하다.
 
 #### # Go Back N
-- 데이터를 연속적으로 보내다가 어느 데이터부터 오류가 발생했는지 검사하는 방식이다.에
+- 데이터를 연속적으로 보내다가 어느 데이터부터 오류가 발생했는지 검사하는 방식이다.
 - NACK를 사용한다. 예로 수신 측에서 송신 측이 보낸 1번 데이터부터 에러 발생을 감지하여 송신 측에게 1번 부터 다시 보내줘라고 NACK 요청을 보낸다.
     - 그러면 수신 측에선 1번 이후로 받은 데이터를 다 폐기하고 송신 측은 다시 1번 데이터 부터 되돌아거서 전송한다.
     - Go Back N
