[aws-saa] - S3 추가 정리

--- a/aws-saa/s3/s3.md
+++ b/aws-saa/s3/s3.md
@@ -21,6 +21,7 @@
       - ex) s3://my-buckey/`folder/depth1/my_file.txt`
       - prefix : `folder/depth1`
       - object name : `my_file.txt`
+      - 버킷의 접두에 갯수는 제한되어있지 않다.
   - 파일 설치 불가
 - 무제한 용량
   - 단 하나의 객체는 **0byte ~ 5TB**의 용량
@@ -112,52 +113,14 @@
   - 원자성 확보 불가능
 - 20년 12월 부터 PUT or Delete 등 작업을 수행하고 나서 읽기를 수행하면 방금 작성한 객체를 볼 수 있다.
 - 성능에 영향을 주지 않으며 무상 제공
-<br>
-
-## S3 티어
-- S3는 여러개의 티어로 구성되어 있다.
-- `S3 Standard`
-  - 가장 기초적인 저장소
-  - 99.99% 가용성
-  - 99.999999999% 내구성
-  - 여러 장소에 분산 보관
-- `S3 -IA` (infrequently Accessed)
-  - 자주 사용되지 않는 데이터를 저렴한 가격에 보관
-  - 보관 비용은 S3 Standard보다 쌈, 대신 데이터를 불러올 때마다 비용 지불
-  - IA 와 Standard 차이는 내구성
-- `S3 - One Zone IA`
-  - IA와 같으나 하나의 AZ에만 저장된다.
-  - 덜 중요하고 자주 사용되지 않는 데이터 (이미지 썸네일 등)
-  - IA보다 더 쌈
-  - 즉시 조회 가능
-- `S3 Intelligent Tiering`
-  - 머신 러닝을 사용해 자동으로 티어 변경
-  - 퍼포먼스 손해/오버헤드 없음
-- `S3 Glacier` (빙하)
-  - 오랫동안 저장하고 접근하지 않는 데이터를 저장
-  - 아카이브영 저장소
-  - 저렴한 가격
-  - 데이터를 가져오는데 분 ~ 시간 단위의 시간이 소요
-- `S3 Glacier Deep Archive`
-  - 매우 쌈
-  - 데이터를 가져오는데 12시간 필요
-
-<br>
-
-## S3 수명 주기
-- "일정 시간이 지난 후 ~~ 을 해라" 라는 명령
-  - 예, 30일이 지난 후 삭제
-  - 예, 30일이 지난 후 Glacier로 옮기기
-- 버전과 연동 가능
-- 예전 버전과 현재 버전에 대해 설정 가능
-- 파일이 업로드 / 삭제 / 업데이트 되었을 떄 이벤트 호출 가능 (Lambda, SQS, SNS 등)
 
 <br>
 
 ## S3 Transfer Acceleration
 - AWS 네트워크를 통해 각 Edge Location에서 더욱 빠른 업로드 가능
   - Edge Location : CloudFront와 같이 일정 지역에 빠른 엑세스를 위한 지역
-
+  - AWS 네트워크를 사용하기 때문에 빠름
+  
 <br>
 
 ## S3 Athena
@@ -166,3 +129,22 @@
 - Serverless
 - 로그를 조회하거나 분석하는데 주로 활용
 - Elastic Search를 활용하는 방법도 있지만 비싸고, 서버를 호스팅 해야되기에 Athena는 쓴만큼만 비용한다.
+
+<br>
+
+## S3 퍼포먼스
+- S3에서 첫 바이트를 얻기까지 100-200ms 정도로 지연 시간이 짧다.
+- 초당 3,500개의 CRUD 작업을 수행 (고성능)
+- SSE-KMS를 사용하는 경우 파일 업로드시 S3에서 GenerateDataKey를 호출
+- SSE-KMS를 사용하는 경우 파일 다운로드시 S3에서 Decrypt KMS-API 호출
+- 즉, 이 두가지 경우는 요청이 생기기에 많은 요청이 생기는 경우 KMS S3 성능에 영향을 줄수도 있다.
+- 최적화를 위한 방법은
+  - 멀티 파트 업로드를 권장한다. (100MB 이상)
+  - S3 Transfer Acceleration와 호환 가능
+  - 다운로드는 바이트 범위 가져오기를 이용한다.
+    - 전체 검색으로 S3에 저장된 객체를 반환할 수 있듯이
+    - 부분 객체 검색–GET 요청에 바이트 Range HTTP 헤더를 사용하여 Amazon S3에 저장된 객체에서 특정 바이트 범위를 검색할 수 있다.
+    - 바이트 범위 요청의 일반적인 크기는 8MB 또는 16MB입니다.
+    - 바이트 범위를 얻는데 실패하더라도 다시 시도하여 실패 복원성이 있다.
+    - 파일의 몇 바이트를 가져오는 요청을 여러개 분할하여 요청한다고 가정할 떄, 병렬적으로 이루어진다.
+    - 파일의 일부를 화수하는 경우 첫 50바이트가 파일의 메타정보를 알 수 있는 바이트라면 인덱스에도 활용할 수 있다.
