[docker] (docs) - 도커 개념 정리

--- a/docker/1_도커란.md
+++ b/docker/1_도커란.md
@@ -1,27 +1,39 @@
 # 도커
 ## 도커란 ?
-- 도커는 리눅스 기술을 사용하여 애플리케이션을 컨테이너로서 좀 더 쉽게 사용할 수 있게 만들어진 오픈소스
-- 일반적으로 도커라고하면 도커 엔진을 의미한다 그밖에 컴포즈, 레지스트리, 허브등이 있다.
+- 도커는 가상환경을 제공해주는데 매우 뛰어난 가상환경을 제공해준다.
+  - 리눅스 기술을 사용하여 애플리케이션을 컨테이너로서 좀 더 쉽게 사용할 수 있게 만들어진 오픈소스
+- 일반적으로 도커라고하면 도커 엔진을 의미한다. 그밖에 컴포즈, 레지스트리, 허브등이 있다.
 - 도커 엔진은 컨테이너를 생성하고 관리한다. 도커의 주 프로젝트이며 기본적인 프로젝트이다.
+
+<br>
 
 ## 컨테이너란 ?
 - 컨테이너는 사전적인 의미로 어떤 물체들을 격리하는 공간
-- 선박의 컨테이너 처럼 프로세스가 사용하는 자원을 묶음 단위로 격리
+- 선박의 컨테이너 처럼 `프로세스가 사용하는 자원을 묶음` 단위로 격리
+  - 서비스가 한정된 자원안에서 효율적으로 동작시키기 위해 컨테이너 사용, 보통 서비스 단위로 컨테이너를 만든다.
+
+<br>
 
 ## 가상 머신 단점
-- 도커가 나온 이유는 가상 머신의 단점을 극복하고자 나왔다.
-- 기존 가상화는 하이퍼바이저를 이용해 여러 개의 운영체제(게스트 OS들)를 하나의 호스트에서 생성해 사용하는 방식
-    - 여러 게스트 OS 들은 가상 머신이라는 단위로 구별
+- 도커가 나온 이유는 `가상 머신의 단점을 극복하고자` 나왔다.
+- 기존 가상화는 `하이퍼바이저`를 이용해 여러 개의 운영체제(게스트 OS들)를 하나의 호스트에서 생성해 사용하는 방식
     - 하이퍼바이저에 의해 생성되고 관리되는 가상 OS 들을 게스트 OS 라고 한다.
-    - 하이퍼바이저에 의해 시스템 자원을 독립된 공간을 생성하는 작업을 하기위해 사용하므로 일반 호스트에 비해 성능 손실이 발생
-        - 게스트 OS를 배포하기 위한 이미지로 만들었을때 크기가 큼
-- 즉 가상 머신은 OS를 생성할 수 있는 장점이 있지만 일반 호스트에 비해 성능 손실이 있다.
+    - **하이퍼바이저란 쉽게 말해서 없는 HDD, CPU 메모리 등을 존재하는 것처럼 추상화하는 작업**을 말한다.
+    - 하이퍼바이저에 의해 `시스템 자원을 독립된 공간을 생성하는 작업을 하기위해 사용`하므로 일반 호스트에 비해 성능 손실이 발생
+    - **보통 가상화를 하는 이유는 서로 다른 환경의 어플리케이션을 돌리기 위함인데, 어플리케이션들을 올리기 위해서 하드웨어 위에 게스트 OS를 올린 후 어플리케이션을 올려야한다.**
+    - 게스트 OS를 배포하기 위한 이미지로 만들었을때 크기가 큼
+    - 즉 가상 머신은 OS를 생성할 수 있는 장점이 있지만 일반 호스트에 비해 성능 손실이 있다.
+
+<br>
 
 ## 가상 머신 단점 극복
-- 도커 컨테이너는 리눅스 기술만 사용하여 chroot, 네임 스페이스, cgroup 을 사용함으로써 프로세스 단위의 컨테이너를 만들기 때문에 성능 손실이 없다.
-    - 즉 가상 머신을 통해 게스트 OS를 만들지 않고 리눅스 기술만 이용해서 컨테이너를 생성
+- 도커 컨테이너는 리눅스 기술만 사용하여 chroot, `네임 스페이스`, `cgroup(컨트롤 그룹)` 을 사용함으로써 프로세스 단위의 컨테이너를 만들기 때문에 성능 손실이 없다.
+    - 즉 **가상 머신을 통해 게스트 OS를 만들지 않고 리눅스 기술만 이용해서 컨테이너를 생성**
+    - 컨트롤 그룹은 CPU나 메모리, 네트워크 등 리소스를 제한할 수 있는 기능이다.
 - 컨테이너에 필요한 커널은 호스트 OS와 공유, 애플리케이션을 구동하는데 필요한 각종 라이브러리 파일들만 가지고 있어 이미지로 만들때 가상머신보다 가볍다.
 - 즉 도커 컨테이너 사용시 가상 머신보다 배포 시간이 빠르고, 성능 손실이 보완된다.
+
+<br>
 
 ## 도커를 시작해야하는 이유
 1. 쿠버네티스 같은 오픈소스 프로젝트들은 도커를 표준으로 개발
@@ -34,7 +46,6 @@
     - 모놀리식 구조는 여러 모듈이 하나의 프로젝트(프로그램) 내에서 동작한다.
     - 서비스의 기능이 복잡해지고 거대해지면 확장성과 유연성이 저하
     - 컨테이너는 여러 모듈에게 독립된 환경을 제공
-
     
 
  
