[docker] (docs) - 도커 설치

--- a/docker/1_도커란.md
+++ b/docker/1_도커란.md
@@ -11,6 +11,8 @@
 - 컨테이너는 사전적인 의미로 어떤 물체들을 격리하는 공간
 - 선박의 컨테이너 처럼 `프로세스가 사용하는 자원을 묶음` 단위로 격리
   - 서비스가 한정된 자원안에서 효율적으로 동작시키기 위해 컨테이너 사용, 보통 서비스 단위로 컨테이너를 만든다.
+- 이미지 : 필요한 프로그램과 라이브러리, 소스를 설치한 뒤 만든 파일
+- 컨테이너 : 이미지를 격리하여 독립된 공간에서 실행한 가상 환경
 
 <br>
 
@@ -27,9 +29,12 @@
 <br>
 
 ## 가상 머신 단점 극복
-- 도커 컨테이너는 리눅스 기술만 사용하여 chroot, `네임 스페이스`, `cgroup(컨트롤 그룹)` 을 사용함으로써 프로세스 단위의 컨테이너를 만들기 때문에 성능 손실이 없다.
+- 하이퍼바이저의 필요 없는 공간을 활용하면 더 많은 자원을 어플리케이션에 투자가 가능하게 된다.
+- 그렇다면 가상화 없이 기술적으로 가능하게 할 수 있을까? `리눅스 커널`
+- 도커 컨테이너는 chroot, `네임 스페이스`, `cgroup(컨트롤 그룹)` 등 리눅스 커널 기능을 사용함으로써 프로세스 단위의 컨테이너를 만들기 때문에 성능 손실이 없다.
     - 즉 **가상 머신을 통해 게스트 OS를 만들지 않고 리눅스 기술만 이용해서 컨테이너를 생성**
-    - 컨트롤 그룹은 CPU나 메모리, 네트워크 등 리소스를 제한할 수 있는 기능이다.
+    - `네임 스페이스` : 공간을 별도로 할당해서 서로 다른 프로세스들이 간섭하지 못하게 한다. 파일 시스템, 네트워크 등을 별도로 관리할 수 있게된다.
+    - `컨트롤 그룹` : 프로세스가 소비할 수 있는 CPU나 메모리, 네트워크 등 리소스를 제한할 수 있는 기능이다.
 - 컨테이너에 필요한 커널은 호스트 OS와 공유, 애플리케이션을 구동하는데 필요한 각종 라이브러리 파일들만 가지고 있어 이미지로 만들때 가상머신보다 가볍다.
 - 즉 도커 컨테이너 사용시 가상 머신보다 배포 시간이 빠르고, 성능 손실이 보완된다.
 
@@ -46,7 +51,11 @@
     - 모놀리식 구조는 여러 모듈이 하나의 프로젝트(프로그램) 내에서 동작한다.
     - 서비스의 기능이 복잡해지고 거대해지면 확장성과 유연성이 저하
     - 컨테이너는 여러 모듈에게 독립된 환경을 제공
-    
+4. 컨테이너 환경의 회사들이 많아지고 있다.
 
- 
+<br>
 
+## 도커의 한계
+- 서비스가 커지면 관리해야하는 컨테이너의 양이 급격하게 증가가 된다.
+  - 도커를 사용하더라도 관리하기 쉽지않다.
+- 보통 도커를 익히고 오케스트레이션인 쿠버네티스를 익혀 관리한다.
